Revision history for Data::Fetch

0.02
	Specify minimum version of Perl for good thread support

0.01	Mon Nov 14 14:29:08 EST 2016
        First draft